# xmgtools

./: LICENSE  MODULE.bazel  README.md
hwpreader/: BUILD  go.mod  hwpreader.go
hwpreader/rtl/: BUILD  chipid.go  consts.go  leds.go  phy.go  ports.go  serdes.go  switch.go
swctl/: BUILD  automator.go  csm.go  go.mod  go.sum  plug.go  scanner.go  swctl.go
swctl/bootext/: BUILD.bazel  automator.go  csm.go  scanner.go  scanner_test.go  statemachine.go
swctl/device/: BUILD.bazel  device.go  plug.go
swctl/uboot/: BUILD.bazel  automator.go
swctl/utils/: BUILD.bazel  logrw.go  logrw_test.go  sm.go  sm_test.go
