# Copyright (C) 2025 - Damien Dejean <dam.dejean@gmail.com>
module(
    name = "xmg-tools",
    version = "0.1",
)

# Depend on rules_go to build Go tools.
bazel_dep(name = "rules_go", version = "0.54.1")

# Depend on gazelle to managed go modules dependencies.
bazel_dep(name = "gazelle", version = "0.43.0")

# Go modules explicit dependencies.
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")

# swctl
go_deps.from_file(go_mod = "//swctl:go.mod")
use_repo(
    go_deps,
    "com_github_azurity_xmodem_go",
    "com_github_machinebox_progress",
    "com_github_tarm_serial",
)
