load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "bootext",
    srcs = [
        "automator.go",
        "scanner.go",
        "statemachine.go",
    ],
    importpath = "xioxoz.fr/swctl/bootext",
    visibility = ["//visibility:public"],
    deps = [
        "//swctl/utils",
        "@com_github_azurity_xmodem_go//:xmodem-go",
        "@com_github_machinebox_progress//:progress",
    ],
)

go_test(
    name = "bootext_test",
    size = "small",
    srcs = ["scanner_test.go"],
    embed = [":bootext"],
)
