load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "utils",
    srcs = [
        "logrw.go",
        "sm.go",
    ],
    importpath = "xioxoz.fr/swctl/utils",
    visibility = ["//visibility:public"],
)

go_test(
    name = "utils_test",
    size = "small",
    srcs = [
        "logrw_test.go",
        "sm_test.go",
    ],
    embed = [":utils"],
)
